--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -24,6 +24,7 @@ $gray3: #767878;
 $white: #fff;
 $black: #000;
 $green: #b23b31;
+$gray: #a0a0a0;
 
 $theme-primary-color: $green;
 $body-bg-color: $white;
