--- a/src/sass/page/_home-default.scss
+++ b/src/sass/page/_home-default.scss
@@ -1156,9 +1156,9 @@
 	text-align: center;
 
 	.gif-registration-slider {
-		width: 550px;
+		width: 230px;
 		display: grid;
-		grid-template-columns: 1fr 1fr;
+		grid-template-columns: 1fr;
 		column-gap: 35px;
 		margin: 0 auto;
 		margin-top: 55px;
