--- a/src/sass/page/_blog-details.scss
+++ b/src/sass/page/_blog-details.scss
@@ -17,6 +17,7 @@
 			font-style: italic;
 			padding: 25px;
 			margin-bottom: 0;
+			border-radius: 4px;
 
 			@include media-query(991px) {
 				font-size: 16px;
